--- a/src/app/search/search.page.html
+++ b/src/app/search/search.page.html
@@ -7,7 +7,7 @@
       <ion-label>お調べ</ion-label>
     </ion-segment-button>
     <ion-segment-button value="latest">
-      <ion-label>あたらし</ion-label>
+      <ion-label>すべて</ion-label>
     </ion-segment-button>
     <ion-segment-button value="user">
       <ion-label>みなさま</ion-label>
