make UI responsible

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,9 @@
   </amplify-sign-up>
   <ion-app>
     <app-menu></app-menu>
-    <ion-router-outlet id="main"></ion-router-outlet>
-    <app-footer></app-footer>
+    <div>
+      <ion-router-outlet id="main"></ion-router-outlet>
+      <app-footer></app-footer>
+    </div>
   </ion-app>
 </amplify-authenticator>
