--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -5,12 +5,6 @@
     </ion-toolbar>
   </ion-header>
   <ion-content>
-    <ion-list>
-      <ion-item [routerLink]="['/profile',username]" (click)="closeMenu()">わたくしのご挨拶</ion-item>
-      <ion-item [routerLink]="['/search',{segment:'latest'}]" (click)="closeMenu()">全てのおしゃべり</ion-item>
-      <ion-item [routerLink]="['/search',{segment:'user'}]" (click)="closeMenu()">ユーザー一覧</ion-item>
-      <ion-item [routerLink]="['/search',{segment:'search'}]" (click)="closeMenu()">おしゃべりを検索</ion-item>
-      <ion-item (click)="signOut()">ごきげんよろしゅう（ログアウト）</ion-item>
-    </ion-list>
+    <app-menu-list></app-menu-list>
   </ion-content>
 </ion-menu>
