--- a/src/app/like-user-list/like-user-list.page.html
+++ b/src/app/like-user-list/like-user-list.page.html
@@ -2,7 +2,16 @@
 
 <ion-content>
   <app-oshaberi-button></app-oshaberi-button>
-  <ng-container *ngIf="likeUsers">
-    <app-user-digest *ngFor="let userInfo of likeUsers" [userInfo]="userInfo"></app-user-digest>
-  </ng-container>
+  <ion-grid>
+    <ion-row>
+      <ion-col *ngIf="responsibleService.showSideMenu" [size]="responsibleService.sideMenuSize">
+        <app-menu-list></app-menu-list>
+      </ion-col>
+      <ion-col [size]="responsibleService.contentSize">
+        <ng-container *ngIf="likeUsers">
+          <app-user-digest *ngFor="let userInfo of likeUsers" [userInfo]="userInfo"></app-user-digest>
+        </ng-container>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
 </ion-content>
