--- a/src/app/oshaberi-detail/oshaberi-detail.page.html
+++ b/src/app/oshaberi-detail/oshaberi-detail.page.html
@@ -2,21 +2,30 @@
 
 <ion-content>
   <app-oshaberi-button></app-oshaberi-button>
-  <ng-container *ngIf="oshaberi">
-    <ng-container *ngIf="oshaberi.parentOshaberi">
-      <app-oshaberi [oshaberi]="oshaberi.parentOshaberi"></app-oshaberi>
-      <span class="line"></span>
-    </ng-container>
-    <div class="oshaberiContentWrapper">
-      <app-oshaberi-header [oshaberi]="oshaberi"></app-oshaberi-header>
-      <app-oshaberi-body [oshaberi]="oshaberi"></app-oshaberi-body>
-    </div>
-    <app-reaction-panel [oshaberi]="oshaberi"></app-reaction-panel>
-    <app-action-panel [oshaberi]="oshaberi" [showNumbers]="false">
-    </app-action-panel>
-    <div *ngIf="oshaberi.replyOshaberi.items.length>0" class="replyHeader">返信</div>
-    <ng-container *ngFor="let oshaberi of oshaberi.replyOshaberi.items">
-      <app-oshaberi [oshaberi]="oshaberi"></app-oshaberi>
-    </ng-container>
-  </ng-container>
+  <ion-grid>
+    <ion-row>
+      <ion-col *ngIf="responsibleService.showSideMenu" [size]="responsibleService.sideMenuSize">
+        <app-menu-list></app-menu-list>
+      </ion-col>
+      <ion-col [size]="responsibleService.contentSize">
+        <ng-container *ngIf="oshaberi">
+          <ng-container *ngIf="oshaberi.parentOshaberi">
+            <app-oshaberi [oshaberi]="oshaberi.parentOshaberi"></app-oshaberi>
+            <span class="line"></span>
+          </ng-container>
+          <div class="oshaberiContentWrapper">
+            <app-oshaberi-header [oshaberi]="oshaberi"></app-oshaberi-header>
+            <app-oshaberi-body [oshaberi]="oshaberi"></app-oshaberi-body>
+          </div>
+          <app-reaction-panel [oshaberi]="oshaberi"></app-reaction-panel>
+          <app-action-panel [oshaberi]="oshaberi" [showNumbers]="false">
+          </app-action-panel>
+          <div *ngIf="oshaberi.replyOshaberi.items.length>0" class="replyHeader">返信</div>
+          <ng-container *ngFor="let oshaberi of oshaberi.replyOshaberi.items">
+            <app-oshaberi [oshaberi]="oshaberi"></app-oshaberi>
+          </ng-container>
+        </ng-container>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
 </ion-content>
