--- a/src/app/search/search.page.html
+++ b/src/app/search/search.page.html
@@ -1,27 +1,36 @@
-<app-header iconType="search" (searchText)="search($event)"></app-header>
+<app-header [isSearch]="true" (searchText)="search($event)"></app-header>
 
 <ion-content>
   <app-oshaberi-button></app-oshaberi-button>
-  <ion-segment [value]="segmentValue" (ionChange)="segmentValueChanged($event)">
-    <ion-segment-button value="search">
-      <ion-label>お調べ</ion-label>
-    </ion-segment-button>
-    <ion-segment-button value="latest">
-      <ion-label>すべて</ion-label>
-    </ion-segment-button>
-    <ion-segment-button value="user">
-      <ion-label>みなさま</ion-label>
-    </ion-segment-button>
-  </ion-segment>
-  <ng-container *ngIf="segmentValue=='search'">
-    <div class="searchIndication" *ngIf="!searchText">ことばをご入力ください</div>
-    <div class="searchIndication" *ngIf="!!searchText && oshaberis.length==0">お調べ結果：なし</div>
-    <app-oshaberi *ngFor="let oshaberi of oshaberis" [oshaberi]="oshaberi"></app-oshaberi>
-    <ion-infinite-scroll #infinitScroll threshold="50px" (ionInfinite)="loadNextOshaberis($event)">
-      <ion-infinite-scroll-content loadingSpinner="bubbles" loadingText="Loading more data...">
-      </ion-infinite-scroll-content>
-    </ion-infinite-scroll>
-  </ng-container>
-  <app-latest *ngIf="segmentValue=='latest'"></app-latest>
-  <app-user *ngIf="segmentValue=='user'"></app-user>
+  <ion-grid>
+    <ion-row>
+      <ion-col *ngIf="responsibleService.showSideMenu" [size]="responsibleService.sideMenuSize">
+        <app-menu-list></app-menu-list>
+      </ion-col>
+      <ion-col [size]="responsibleService.contentSize">
+        <ion-segment [value]="segmentValue" (ionChange)="segmentValueChanged($event)">
+          <ion-segment-button value="search">
+            <ion-label>お調べ</ion-label>
+          </ion-segment-button>
+          <ion-segment-button value="latest">
+            <ion-label>すべて</ion-label>
+          </ion-segment-button>
+          <ion-segment-button value="user">
+            <ion-label>みなさま</ion-label>
+          </ion-segment-button>
+        </ion-segment>
+        <ng-container *ngIf="segmentValue=='search'">
+          <div class="searchIndication" *ngIf="!searchText">ことばをご入力ください</div>
+          <div class="searchIndication" *ngIf="!!searchText && oshaberis.length==0">お調べ結果：なし</div>
+          <app-oshaberi *ngFor="let oshaberi of oshaberis" [oshaberi]="oshaberi"></app-oshaberi>
+          <ion-infinite-scroll #infinitScroll threshold="50px" (ionInfinite)="loadNextOshaberis($event)">
+            <ion-infinite-scroll-content loadingSpinner="bubbles" loadingText="Loading more data...">
+            </ion-infinite-scroll-content>
+          </ion-infinite-scroll>
+        </ng-container>
+        <app-latest *ngIf="segmentValue=='latest'"></app-latest>
+        <app-user *ngIf="segmentValue=='user'"></app-user>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
 </ion-content>
